fix grid spacing

--- a/style.css
+++ b/style.css
@@ -19,8 +19,6 @@ body {
     margin: 0;
     padding: 0px;
     font-family: sukhumvit_setthin, sans-serif;
-    display: grid;
-    grid-template-rows: auto;
 }
 
 body.homepage {
@@ -29,12 +27,12 @@ body.homepage {
 }
 
 #content-area {
-    grid-row: 1;
     position: relative;
     z-index: 5;
     background-color: white;
     display: grid;
     grid-template-rows: auto 1fr auto;
+    min-height: 100%;
 }
 
 body.homepage #content-area {
@@ -52,8 +50,7 @@ body.homepage #content-area {
     margin: auto;
     margin-top: 0;
     margin-bottom: 0;
-    display: grid;
-    grid-template-rows: auto 1fr auto;
+    height: min-content;
 }
 
 body.homepage .main-content {
